Revert "Merge branch 'master' into es-pushdown-topn-aggregation"
This reverts commit 893d75106021959e971402fb485b3def80e2ab12, reversing
changes made to db72dd473f97602f36e6090e86c68cf04c063463.